--- a/index.html
+++ b/index.html
@@ -13,15 +13,46 @@
         <div class="top_container">
             <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
             <h1>I'm Chris.</h1>
-            <p>a <span class="pro">pro</span>grammer.</p>
+            <h2>a <span class="pro">pro</span>grammer.</h2>
             <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
             <img src="images/mountain.png" alt="mountain-img">
         </div>
-        <div class="middle_container">
-
+        <div class="middle-container">
+          <div class="profile">
+            <img src="" alt="">
+            <h2>Hello.</h2>
+            <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          </div>
+          <hr>
+          <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+              <img class="computer-img" src="images/computer.png" alt=computer-img">
+              <h3>Lorem & Ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            </div>
+            <div class="skill-row">
+              <img class="chili-img" src="images/chillies.png" alt="chili-img">
+              <h3>Lorem Ipsum Dolor</h3>
+              <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          </div>
         </div>
-        <div class="bottom_container">
 
+
+        <div class="bottom-container">
+          <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+          <a class="footer-link" href="https://twitter.com/">Twitter</a>
+          <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+          <p class="copyright">© 2023 Chris Sulistio.</p>
         </div>
+
     </body>
 </html>
